Making publication list, some formatting changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,6 @@
 
         <p style="font-size: 20px">{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
@@ -38,6 +30,12 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        <ul>
+           {% for item in site.data.navigation.docs %}
+              <li><h2><a href="{{ item.url }}">{{ item.title }}</a></li></h2>
+           {% endfor %}
+        </ul>
       </header>
       <section>
 
