Added talks, moved publications to separate page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         {% endif %}
 
         <ul>
-           {% for item in site.data.navigation.docs %}
+           {% for item in site.data.navigation %}
               <li><h2><a href="{{ item.url }}">{{ item.title }}</a></li></h2>
            {% endfor %}
         </ul>
